fixed overlap some more

--- a/styles/sass/_mediaqueries.scss
+++ b/styles/sass/_mediaqueries.scss
@@ -347,7 +347,7 @@
     }
   }
   .articles {
-    height: 165vh;
+    height: 175vh;
 
     .article {
       text-align: center;
