--- a/styles/style.css
+++ b/styles/style.css
@@ -974,7 +974,7 @@ footer {
   }
 
   .articles {
-    height: 165vh;
+    height: 175vh;
   }
   .articles .article {
     text-align: center;
